--- a/Lab2/Portfolio/project1.html
+++ b/Lab2/Portfolio/project1.html
@@ -4,34 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
+    <link rel="stylesheet" href="project1.css">
+
 </head>
 <body>
     <h style="font-size:xx-large; background-color: beige; color:blue; align-items:center;"><u>PORTFOLIO</u></h><br><br>
+    <header>
     <ul>
-        <li><a href="Home">Home</a></li>
-        <li><a href="About">About</a></li>
-        <li><a href="Projects">Projects</a></li>
-        <li><a href="Resume">Resume</a></li>
-        <li><a href="Leetcode Record">LeetCode Record</a></li>
-        <li><a href="Contact">Contact</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#resume">Resume</a></li>
+        <li><a href="#leetcode">LeetCode Record</a></li>
+        <li><a href="#contact">Contact</a></li>
     </ul>
-    <h1>Hello, I'm Rishabh Singh</h1>
-    <p>Welcome to my portfolio! I'm curious about web developement and DSA problem solving.</p>
-    <h1>About Me</h1>
-    <p>I am a 3rd year B.Tech(CSE) student with keen interest in Web Developement.</p>
-    <h1>Projects</h1>
+    </header><br>
+
+    <h1>Hello, I'm Rishabh Singh</h1><br>
+    <p>Welcome to my portfolio! I'm curious about web developement and DSA problem solving.</p><br>
+    <h1 id="about">About Me</h1><br>
+    <p>I am a 3rd year B.Tech(CSE) student with keen interest in Web Developement.</p><br>
+    <h1>Projects</h1><br>
     <ul>
-        <li><b>Portfolio Website</b></li><p>This website is a showcase of my work.</p>
-        <li><b>FoodKart</b></li><p>This is a food ordering website.</p>
-        <li><b>Calculator</b></li><p>This is a online web calculator.</p>
+        <li><b>Portfolio Website</b></li><p>This website is a showcase of my work.</p><br>
+        <li><b>FoodKart</b></li><p>This is a food ordering website.</p><br>
+        <li><b>Calculator</b></li><p>This is a online web calculator.</p><br>
     </ul>
     <h1>Resume</h1>
-    <a href="Resume">Resume</a>
-    <h1>Leetcode</h1>
+    <a href="Resume">Resume</a><br><br>
+    <h1>Leetcode</h1><br>
     <p>Visit my Leetcode profile</p>
-    <a href="Leetcode profile">Leetcode profile</a>
-    <p>I have solved 100+ questions on Leetcode.</p>
-    <h1>Contact</h1>
+    <a href="Leetcode profile">Leetcode profile</a><br><br>
+    <p>I have solved 100+ questions on Leetcode.</p><br>
+    <h1 id="contact">Contact</h1>
     <p>You can contact me at:</p>
     <a href="rishabhanandsingh277@gmail.com">rishabhanandsingh277@gmail.com</a><br>
     <a href="9979086603">9979086603</a>
