--- a/Lab2/Portfolio/blog.html
+++ b/Lab2/Portfolio/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>BLOG</title>
 </head>
 <body>
     <header>
@@ -13,11 +13,21 @@
     </header>
 
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <sec>"Hi, I’m Rishabh Anand Singh, a 3rd year Computer Science Engineering student from GLA University, Mathura. I enjoy building websites, learning new technologies, and solving real-world problems with code. This blog is my space to share my journey, projects, and thoughts about technology, freelancing, and internships abroad."</sec>
+        <sec>I believe the best way to learn is by building. Some of the projects I’ve worked on include:
+
+A Portfolio Website built using React and CSS.
+
+An E-commerce App using the MERN stack with user authentication.
+
+A Weather App that fetches real-time data using APIs.
+
+A Blog Website (this one!) where I share what I learn.
+
+Each project helped me understand new tools and improve my problem-solving skills.</sec>
+        <sec>I’m always learning and exploring. Recently, I’ve been diving into Full Stack Web Development and exploring basics of Data Analysis. I also practice DSA regularly to strengthen my problem-solving skills. My goal is to apply these skills in freelancing projects and international internships in Europe to gain global exposure.</sec>
+        <sec>My dream is to become a skilled Full Stack Developer and work on impactful projects that reach people worldwide. In the short term, I’m focused on building my freelancing career, contributing to open-source, and applying for internships in countries like Germany, France, and Italy. Through this journey, I hope to learn, grow, and make a difference.</sec>
+
     </main>
 
     <footer>
