--- a/practice.html
+++ b/practice.html
@@ -13,5 +13,20 @@
     <div class="inline">
         this is block element
     </div>
+
+    <div class="container">
+    <div class="circle1">cir1</div>
+    <div class="circle">cir2</div>
+    <div class="circle">cir3</div>
+    <div class="circle">cir4</div>
+    <div class="circle">cir5</div>
+    <div class="circle">cir6</div>
+    <div class="circle">cir7</div>
+
+    </div>
+
+    <div class="container1">
+        <div class="circle1">cir1</div>
+    </div>
 </body>
 </html>
